# GamePadVirtual-Desktop

./: .gitignore  .qmake.stash  CMakeLists.txt  CMakeSettings.json  Comandos pra gerar a pasta portatil.txt  GamePadVirtual-Desktop.pro  GamePadVirtual-Desktop.qtvscr  GamePadVirtual-Desktop.slnx  GamePadVirtual-Desktop.vcxproj  GamePadVirtual-Desktop.vcxproj.filters  README.md  Resource.aps  app_resources.rc
ViGEmClient-master/lib/debug/x64/: ViGEmClient.idb  ViGEmClient.lib
ViGEmClient-master/lib/release/x64/: ViGEmClient.lib
ViGEmClient/src/: ViGEmClient.vcxproj
src/: controller_types.h  gamepaddisplaywidget.cpp  gamepaddisplaywidget.h  main.cpp  mainwindow.cpp  mainwindow.h
src/communication/: ble_server.cpp  ble_server.h  bluetooth_server.cpp  bluetooth_server.h  connection_manager.cpp  connection_manager.h  network_server.cpp  network_server.h  tcp_server.cpp  tcp_server.h  udp_server.cpp  udp_server.h  usb_monitor.cpp  usb_monitor.h  wifi_server.cpp  wifi_server.h
src/protocol/: gamepad_packet.h
src/streaming/: screen_streamer.cpp  screen_streamer.h
src/utils/: input_emulator.cpp  input_emulator.h
src/virtual_gamepad/: gamepad_manager.cpp  gamepad_manager.h
